--- a/index.html
+++ b/index.html
@@ -35,18 +35,20 @@
       src="https://kit.fontawesome.com/d85f3a3d4a.js"
       crossorigin="anonymous"
     ></script>
-    <script src="./scripts/scripts.js"></script>
   </head>
   <body id="homePage">
     <!-- navbar -->
     <nav class="navbar">
       <h3 class="cornerP">P</h3>
       <div class="icons">
-        <a class="icon" href="https://api.whatsapp.com/send?phone=+27794637741" target=_blank
+        <a
+          class="icon"
+          href="https://api.whatsapp.com/send?phone=+27794637741"
+          target="_blank"
           ><i class="fab fa-whatsapp"></i
         ></a>
 
-        <a class="icon" href="mailto:uthmaanbreda@gmail.com" target=_blank
+        <a class="icon" href="mailto:uthmaanbreda@gmail.com" target="_blank"
           ><i class="fas fa-envelope"></i
         ></a>
       </div>
@@ -58,7 +60,7 @@
         <a class="link" href="#testimonials">Testimonials</a>
         <a class="link" href="#contact">Contact</a>
       </ul>
-      <a class="tel" href="tel:+27794637741" target=_blank>+27 79 463 7741</a>
+      <a class="tel" href="tel:+27794637741" target="_blank">+27 79 463 7741</a>
     </nav>
     <!-- Home / Landing -->
     <section>
@@ -71,8 +73,10 @@
           <div>
             <h1>Aspiring <span class="stndout">FULL STACK</span> Developer</h1>
             <p class="description">
-              Welcome to my site. Built from the ground up with my blood, sweat and tears (..and coffee).<br>
-              I am Uthmaan and I have been working for the past few months learning how to code.
+              Welcome to my site. Built from the ground up with my blood, sweat
+              and tears (..and coffee).<br />
+              I am Uthmaan and I have been working for the past few months
+              learning how to code.
             </p>
           </div>
           <div class="btn-contain">
@@ -94,7 +98,7 @@
           </div>
           <div class="counters">
             <div class="counter">
-              <p class="counter-num">4</p>
+              <p class="counter-num mnth"></p>
               <p class="counter-name">months experience</p>
             </div>
             <div class="counter">
@@ -132,10 +136,10 @@
           <div class="text2">
             <h1>Aspiring <span class="stndout">FULL STACK</span> Developer</h1>
             <p class="description">
-              I am a diligent and hard-working person with a good-natured and friendly
-              spirit. I work well with others and can work independently as well.
-              I enjoy the outdoors as well as spending time at home. I would consider
-              myself a well-rounded person.
+              I am a diligent and hard-working person with a good-natured and
+              friendly spirit. I work well with others and can work
+              independently as well. I enjoy the outdoors as well as spending
+              time at home. I would consider myself a well-rounded person.
             </p>
           </div>
         </div>
@@ -143,14 +147,32 @@
         <div class="content-right skill-icons">
           <div class="info-cont">
             <div class="information">
-              <div class="info"><i class="fas fa-birthday-cake"></i><p>September 1996</p></div>
-              <div class="info"><i class="fas fa-mobile-alt"></i><p>079 463 7741</p></div>
-              <div class="info"><i class="fas fa-envelope-open-text"></i><p>uthmaanbreda@gmail.com</p></div>
+              <div class="info">
+                <i class="fas fa-birthday-cake"></i>
+                <p>September 1996</p>
+              </div>
+              <div class="info">
+                <i class="fas fa-mobile-alt"></i>
+                <p>079 463 7741</p>
+              </div>
+              <div class="info">
+                <i class="fas fa-envelope-open-text"></i>
+                <p>uthmaanbreda@gmail.com</p>
+              </div>
             </div>
             <div class="information">
-              <div class="info"><i class="fas fa-language"></i><p>English / Afrikaans</p></div>
-              <div class="info"><i class="fas fa-location-arrow"></i><p>Cape Town, South Africa</p></div>
-              <div class="info"><i class="fas fa-cogs"></i><p>Aspiring Web Developer</p></div>
+              <div class="info">
+                <i class="fas fa-language"></i>
+                <p>English / Afrikaans</p>
+              </div>
+              <div class="info">
+                <i class="fas fa-location-arrow"></i>
+                <p>Cape Town, South Africa</p>
+              </div>
+              <div class="info">
+                <i class="fas fa-cogs"></i>
+                <p>Aspiring Web Developer</p>
+              </div>
             </div>
           </div>
           <div class="skills">
@@ -233,8 +255,8 @@
               <p class="year">2020</p>
               <p class="descr">
                 Studied part time LAW with unisa for 6 months as to continue
-                from the Bcom Law, but unfortunately during lockdown the study material
-                sent wasn't sent on time and I started working.
+                from the Bcom Law, but unfortunately during lockdown the study
+                material sent wasn't sent on time and I started working.
               </p>
             </div>
             <div class="item">
@@ -253,8 +275,9 @@
               />
               <p class="year">2017</p>
               <p class="descr">
-                Did 1 year of a full-time basic Arabic course at Darun Naim and did well,
-                the certificate is only given after the second year of studies.
+                Did 1 year of a full-time basic Arabic course at Darun Naim and
+                did well, the certificate is only given after the second year of
+                studies.
               </p>
             </div>
             <div class="item">
@@ -286,13 +309,17 @@
             <div class="item">
               <img class="logo" src="#" alt="Cuecon" />
               <p class="year">2019</p>
-              <p class="descr">Renovation and Building work with Cuecon, left when the project ended.</p>
+              <p class="descr">
+                Renovation and Building work with Cuecon, left when the project
+                ended.
+              </p>
             </div>
             <div class="item">
               <img class="logo" src="#" alt="Gamia" />
               <p class="year">2017-2018</p>
               <p class="descr">
-                Part time Administrative work with Gamia Projects, I worked as a casual with my dad
+                Part time Administrative work with Gamia Projects, I worked as a
+                casual with my dad
               </p>
             </div>
             <div class="item">
@@ -329,57 +356,84 @@
             ></a>
           </div>
           <ul class="dots">
-            <li class="dot" onclick="currentSlide(1)"
-              >Bmi Calculator <i class="fas fa-external-link-alt proj-icon"></i
-            ></li>
-            <li class="dot sld6" onclick="currentSlide(2)"
-              >Currency Converter <i class="fas fa-external-link-alt proj-icon"></i
-            ></li>
-            <li class="dot" onclick="currentSlide(3)"
-              >Timeline <i class="fas fa-external-link-alt proj-icon"></i
-            ></li>
-            <li class="dot" onclick="currentSlide(4)"
-              >Testimonial <i class="fas fa-external-link-alt proj-icon"></i
-            ></li>
-            <li class="dot" onclick="currentSlide(5)"
-              >Contact Form <i class="fas fa-external-link-alt proj-icon"></i
-            ></li>
-            <li class="dot" onclick="currentSlide(6)"
-              >Project Cards <i class="fas fa-external-link-alt proj-icon"></i
-            ></li>
+            <li class="dot" onclick="currentSlide(1)">
+              Bmi Calculator <i class="fas fa-external-link-alt proj-icon"></i>
+            </li>
+            <li class="dot sld6" onclick="currentSlide(2)">
+              Currency Converter
+              <i class="fas fa-external-link-alt proj-icon"></i>
+            </li>
+            <li class="dot" onclick="currentSlide(3)">
+              Timeline <i class="fas fa-external-link-alt proj-icon"></i>
+            </li>
+            <li class="dot" onclick="currentSlide(4)">
+              Testimonial <i class="fas fa-external-link-alt proj-icon"></i>
+            </li>
+            <li class="dot" onclick="currentSlide(5)">
+              Contact Form <i class="fas fa-external-link-alt proj-icon"></i>
+            </li>
+            <li class="dot" onclick="currentSlide(6)">
+              Project Cards <i class="fas fa-external-link-alt proj-icon"></i>
+            </li>
           </ul>
         </div>
 
         <div class="content-right-proj">
           <div class="slideshow-container">
-            <div class="mySlides fade slide5" style="display:flex;">
-              <a class="btnlnk" href="https://replit.com/@uthmaanb/BMIcalculator#main.py" target=_blank>
-                live site</a>
+            <div class="mySlides fade slide5" style="display: flex">
+              <a
+                class="btnlnk"
+                href="https://replit.com/@uthmaanb/BMIcalculator#main.py"
+                target="_blank"
+              >
+                live site</a
+              >
             </div>
 
             <div class="mySlides fade slide6">
-              <a class="btnlnk" href="https://replit.com/join/sxrfsqlnoa-uthmaanb" target=_blank>
-                live site</a>
+              <a
+                class="btnlnk"
+                href="https://replit.com/join/sxrfsqlnoa-uthmaanb"
+                target="_blank"
+              >
+                live site</a
+              >
             </div>
 
             <div class="mySlides fade slide1">
-              <a class="btnlnk" href="https://naughty-edison-e09493.netlify.app" target=_blank
-                >live site</a>
+              <a
+                class="btnlnk"
+                href="https://naughty-edison-e09493.netlify.app"
+                target="_blank"
+                >live site</a
+              >
             </div>
 
             <div class="mySlides fade slide2">
-              <a class="btnlnk" href="https://keen-ramanujan-cb8943.netlify.app" target=_blank
-                >live site</a>
+              <a
+                class="btnlnk"
+                href="https://keen-ramanujan-cb8943.netlify.app"
+                target="_blank"
+                >live site</a
+              >
             </div>
 
             <div class="mySlides fade slide3">
-              <a class="btnlnk" href="https://upbeat-shaw-31e034.netlify.app/" target=_blank
-                >live site</a>
+              <a
+                class="btnlnk"
+                href="https://upbeat-shaw-31e034.netlify.app/"
+                target="_blank"
+                >live site</a
+              >
             </div>
 
             <div class="mySlides fade slide4">
-              <a class="btnlnk" href="https://vigorous-poitras-6ae56e.netlify.app" target=_blank
-                >live site</a>
+              <a
+                class="btnlnk"
+                href="https://vigorous-poitras-6ae56e.netlify.app"
+                target="_blank"
+                >live site</a
+              >
             </div>
           </div>
         </div>
@@ -428,9 +482,10 @@
                 <h2>Candice Amon</h2>
                 <h3 class="title">-Life Choices Academy Facilitator-</h3>
                 <q>
-                  Follows instructions very well.He is a humble and self organised indivdiual.
-                  Possesses a lot of leadership skills. Does not say much and allows his work
-                  to make noise on his behalf.
+                  Follows instructions very well.He is a humble and self
+                  organised indivdiual. Possesses a lot of leadership skills.
+                  Does not say much and allows his work to make noise on his
+                  behalf.
                 </q>
               </div>
             </div>
@@ -444,9 +499,10 @@
                 <h2>Thapelo Tsotetsi</h2>
                 <h3 class="title">-Coding Lecturer-</h3>
                 <q>
-                  Uthmaan is an incredible student at Lifechoices Coding Academy. His work ethics
-                  and intellectual skills are amazing. He has a great personality and work well
-                  withing a team. He has a very good communication skill which allows him to ask
+                  Uthmaan is an incredible student at Lifechoices Coding
+                  Academy. His work ethics and intellectual skills are amazing.
+                  He has a great personality and work well withing a team. He
+                  has a very good communication skill which allows him to ask
                   the right questions at the right time.
                 </q>
               </div>
@@ -477,9 +533,9 @@
                 <h3 class="title">-Aspiring Developer-</h3>
                 <q>
                   Uthmaan, is a peoples person and enjoys working with others.
-                  He's filled with so much potential and brings it all to the table.
-                  Uthmaan is also someone that's always willing to help others & does an
-                  excellent job.
+                  He's filled with so much potential and brings it all to the
+                  table. Uthmaan is also someone that's always willing to help
+                  others & does an excellent job.
                 </q>
               </div>
             </div>
@@ -506,7 +562,7 @@
               />
               <div class="text text3">
                 <h2>Gideon</h2>
-                <h3 class="title">-Dragoonix "King of Conquerers"-</h3>
+                <h3 class="title">-Aspiring Developer-</h3>
                 <q>
                   He is a guy with a big heart. he assists those who ask,
                   without hesitation. He is a conquerer of hearts and minds.
@@ -535,13 +591,17 @@
             <div class="cnt-box mailer">
               <a
                 class="cnt-me-link"
-                href="https://www.google.co.za/maps/@-34.0233805,18.6294385,14z" target=_blank
+                href="https://www.google.co.za/maps/@-34.0233805,18.6294385,14z"
+                target="_blank"
                 ><i class="fas fa-map-marked-alt fst-icon icon"></i>Cape Town,
                 South Africa</a
               >
             </div>
             <div class="cnt-box">
-              <a class="cnt-me-link" href="mailto:uthmaanbreda@gmail.com" target=_blank
+              <a
+                class="cnt-me-link"
+                href="mailto:uthmaanbreda@gmail.com"
+                target="_blank"
                 ><i class="fas fa-envelope fst-icon icon"></i
                 >uthmaanbreda@gmail.com</a
               >
@@ -549,13 +609,17 @@
             <div class="cnt-box">
               <a
                 class="cnt-me-link"
-                href="https://api.whatsapp.com/send?phone=+27794637741" target=_blank
+                href="https://api.whatsapp.com/send?phone=+27794637741"
+                target="_blank"
                 ><i class="fab fa-whatsapp icon fst-icon icon"></i>079 463
                 7741</a
               >
             </div>
             <div class="cnt-box">
-              <a class="cnt-me-link" href="https://github.com/uthmaanb" target=_blank
+              <a
+                class="cnt-me-link"
+                href="https://github.com/uthmaanb"
+                target="_blank"
                 ><i class="fab fa-github fst-icon icon"></i>Github Profile</a
               >
             </div>
@@ -608,9 +672,9 @@
             </button>
           </form>
         </div>
-        <div class="footer">
+        <footer class="footer">
           <p>Uthmaan Breda<i class="fas fa-microchip"></i></p>
-        </div>
+        </footer>
       </div>
     </section>
     <!-- script tags under here -->
@@ -653,5 +717,6 @@
         });
       });
     </script>
+    <script src="./scripts/scripts.js"></script>
   </body>
 </html>
