--- a/index.html
+++ b/index.html
@@ -35,6 +35,11 @@
       src="https://kit.fontawesome.com/d85f3a3d4a.js"
       crossorigin="anonymous"
     ></script>
+
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.14.0/devicon.min.css"
+    />
   </head>
   <body id="homePage">
     <!-- navbar -->
@@ -132,7 +137,50 @@
           <p class="p-title name">About Me</p>
           <p class="p-title num">2.0</p>
         </div>
-        <div class="content-left">
+        <div class="content-left3">
+          <div class="info-cont">
+            <div class="information">
+              <div class="info">
+                <div class="info-icon">
+                  <i class="fas fa-birthday-cake"></i>
+                </div>
+                <p>September 1996</p>
+              </div>
+              <div class="info">
+                <div class="info-icon">
+                  <i class="fas fa-mobile-alt"></i>
+                </div>
+                <p>079 463 7741</p>
+              </div>
+              <div class="info">
+                <div class="info-icon">
+                  <i class="fas fa-envelope-open-text"></i>
+                </div>
+                <p>uthmaanbreda@gmail.com</p>
+              </div>
+              <div class="info">
+                <div class="info-icon">
+                  <i class="fas fa-language"></i>
+                </div>
+                <p>English / Afrikaans</p>
+              </div>
+              <div class="info">
+                <div class="info-icon">
+                  <i class="fas fa-location-arrow"></i>
+                </div>
+                <p>Cape Town, South Africa</p>
+              </div>
+              <div class="info">
+                <div class="info-icon">
+                  <i class="fas fa-cogs"></i>
+                </div>
+                <p>Aspiring Web Developer</p>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="content-right3 skill-icons">
           <div class="text2">
             <h1>Aspiring <span class="stndout">FULL STACK</span> Developer</h1>
             <p class="description">
@@ -142,57 +190,16 @@
               time at home. I would consider myself a well-rounded person.
             </p>
           </div>
-        </div>
 
-        <div class="content-right skill-icons">
-          <div class="info-cont">
-            <div class="information">
-              <div class="info">
-                <i class="fas fa-birthday-cake"></i>
-                <p>September 1996</p>
-              </div>
-              <div class="info">
-                <i class="fas fa-mobile-alt"></i>
-                <p>079 463 7741</p>
-              </div>
-              <div class="info">
-                <i class="fas fa-envelope-open-text"></i>
-                <p>uthmaanbreda@gmail.com</p>
-              </div>
-            </div>
-            <div class="information">
-              <div class="info">
-                <i class="fas fa-language"></i>
-                <p>English / Afrikaans</p>
-              </div>
-              <div class="info">
-                <i class="fas fa-location-arrow"></i>
-                <p>Cape Town, South Africa</p>
-              </div>
-              <div class="info">
-                <i class="fas fa-cogs"></i>
-                <p>Aspiring Web Developer</p>
-              </div>
-            </div>
-          </div>
           <div class="skills">
             <h2 class="head2">Current <span class="stndout">Skills</span></h2>
             <div class="icon-box">
-              <i class="fab fa-html5 skill-icon tooltip"
-                ><span class="tooltiptext">HTML5</span></i
-              >
-              <i class="fab fa-css3-alt skill-icon tooltip"
-                ><span class="tooltiptext">CSS3</span></i
-              >
-              <i class="fab fa-python skill-icon tooltip"
-                ><span class="tooltiptext">Python</span></i
-              >
-              <i class="fab fa-js-square skill-icon tooltip"
-                ><span class="tooltiptext">Javascript</span></i
-              >
-              <i class="fas fa-users skill-icon tooltip"
-                ><span class="tooltiptext">Teamwork</span></i
-              >
+              <i class="fab fa-html5 skill-icon tooltip"></i>
+              <i class="fab fa-css3-alt skill-icon tooltip"></i>
+              <i class="fab fa-python skill-icon tooltip"></i>
+              <i class="fab fa-js-square skill-icon tooltip"></i>
+              <i class="devicon-flask-original skill-icon"></i>
+              <i class="devicon-mysql-plain skill-icon"></i>
             </div>
           </div>
         </div>
@@ -209,7 +216,8 @@
           <div class="text2">
             <h1>Education & <span class="stndout">Experience</span></h1>
             <p class="description">
-              I am a fast learner so I can catch up on information quickly.
+              I consider myself to be a well-rounded person and can adapt to my
+              environment easily.
             </p>
           </div>
           <div class="btn-contain xp-cv">
@@ -319,7 +327,7 @@
               <p class="year">2017-2018</p>
               <p class="descr">
                 Part time Administrative work with Gamia Projects, I worked as a
-                casual with my dad
+                casual with my dad.
               </p>
             </div>
             <div class="item">
@@ -383,7 +391,7 @@
             <div class="mySlides fade slide5" style="display: flex">
               <a
                 class="btnlnk"
-                href="https://replit.com/@uthmaanb/BMIcalculator#main.py"
+                href="https://replit.com/@uthmaanb/BMIcalculator-1#.replit"
                 target="_blank"
               >
                 live site</a
@@ -393,7 +401,7 @@
             <div class="mySlides fade slide6">
               <a
                 class="btnlnk"
-                href="https://replit.com/join/sxrfsqlnoa-uthmaanb"
+                href="https://replit.com/@uthmaanb/currency-converter#main.py"
                 target="_blank"
               >
                 live site</a
@@ -463,13 +471,16 @@
                 src="./images/godwin-dzvapatsra.jpg"
                 alt="image"
               />
+              <br />
               <div class="text text4">
                 <h2>Godwin Dzvapatsra</h2>
+                <br />
                 <h3 class="title">-Head of Curriculum and Learning-</h3>
+                <br />
                 <q>
                   I am delighted to be called upon as a reference for Uthmaan.
-                  He always behaves professionally.
-                </q>
+                  He always behaves professionally. </q
+                ><br />
               </div>
             </div>
             <div class="testemonial-text">
@@ -477,16 +488,18 @@
                 class="profile2"
                 src="./images/candice-amon.png"
                 alt="image"
-              />
+              /><br />
               <div class="text text5">
                 <h2>Candice Amon</h2>
+                <br />
                 <h3 class="title">-Life Choices Academy Facilitator-</h3>
+                <br />
                 <q>
                   Follows instructions very well.He is a humble and self
                   organised indivdiual. Possesses a lot of leadership skills.
                   Does not say much and allows his work to make noise on his
-                  behalf.
-                </q>
+                  behalf. </q
+                ><br />
               </div>
             </div>
             <div class="testemonial-text">
