--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
             <h1>Education & <span class="stndout">Experience</span></h1>
             <p class="description">
               I consider myself to be a well-rounded person and can adapt to my
-              environment easily.
+              environment very well.
             </p>
           </div>
           <div class="btn-contain xp-cv">
