--- a/index.html
+++ b/index.html
@@ -372,7 +372,8 @@
               <i class="fas fa-external-link-alt proj-icon"></i>
             </li>
             <li class="dot" onclick="currentSlide(3)">
-              Timeline <i class="fas fa-external-link-alt proj-icon"></i>
+              Co-op Sneaker Site
+              <i class="fas fa-external-link-alt proj-icon"></i>
             </li>
             <li class="dot" onclick="currentSlide(4)">
               Testimonial <i class="fas fa-external-link-alt proj-icon"></i>
@@ -429,7 +430,7 @@
             <div class="mySlides fade slide3">
               <a
                 class="btnlnk"
-                href="https://upbeat-shaw-31e034.netlify.app/"
+                href="https://nostalgic-booth-3e9bb6.netlify.app/"
                 target="_blank"
                 >live site</a
               >
