--- a/index.html
+++ b/index.html
@@ -372,16 +372,33 @@
               <i class="fas fa-external-link-alt proj-icon"></i>
             </li>
             <li class="dot" onclick="currentSlide(3)">
-              Co-op Sneaker Site
+              full-stack E-commerce site
               <i class="fas fa-external-link-alt proj-icon"></i>
             </li>
             <li class="dot" onclick="currentSlide(4)">
-              Testimonial <i class="fas fa-external-link-alt proj-icon"></i>
+              Co-op frontend sneaker site
+              <i class="fas fa-external-link-alt proj-icon"></i>
             </li>
             <li class="dot" onclick="currentSlide(5)">
-              Contact Form <i class="fas fa-external-link-alt proj-icon"></i>
+              Ticket sales
+              <i class="fas fa-external-link-alt proj-icon"></i>
             </li>
             <li class="dot" onclick="currentSlide(6)">
+              add project here
+              <i class="fas fa-external-link-alt proj-icon"></i>
+            </li>
+            <li class="dot" onclick="currentSlide(7)">
+              add project here
+              <i class="fas fa-external-link-alt proj-icon"></i>
+            </li>
+            <li class="dot" onclick="currentSlide(8)">
+              add project here
+              <i class="fas fa-external-link-alt proj-icon"></i>
+            </li>
+            <li class="dot" onclick="currentSlide(9)">
+              Contact Form <i class="fas fa-external-link-alt proj-icon"></i>
+            </li>
+            <li class="dot" onclick="currentSlide(10)">
               Project Cards <i class="fas fa-external-link-alt proj-icon"></i>
             </li>
           </ul>
@@ -389,7 +406,7 @@
 
         <div class="content-right-proj">
           <div class="slideshow-container">
-            <div class="mySlides fade slide5" style="display: flex">
+            <div class="mySlides fade slide1" style="display: flex">
               <a
                 class="btnlnk"
                 href="https://replit.com/@uthmaanb/BMIcalculator-1#.replit"
@@ -399,7 +416,7 @@
               >
             </div>
 
-            <div class="mySlides fade slide6">
+            <div class="mySlides fade slide2">
               <a
                 class="btnlnk"
                 href="https://replit.com/@uthmaanb/currency-converter#main.py"
@@ -409,25 +426,16 @@
               >
             </div>
 
-            <div class="mySlides fade slide1">
-              <a
-                class="btnlnk"
-                href="https://naughty-edison-e09493.netlify.app"
-                target="_blank"
-                >live site</a
-              >
-            </div>
-
-            <div class="mySlides fade slide2">
-              <a
-                class="btnlnk"
-                href="https://keen-ramanujan-cb8943.netlify.app"
-                target="_blank"
-                >live site</a
-              >
-            </div>
-
             <div class="mySlides fade slide3">
+              <a
+                class="btnlnk"
+                href="https://final-project-uthmaanb.netlify.app/"
+                target="_blank"
+                >live site</a
+              >
+            </div>
+
+            <div class="mySlides fade slide4">
               <a
                 class="btnlnk"
                 href="https://nostalgic-booth-3e9bb6.netlify.app/"
@@ -436,7 +444,37 @@
               >
             </div>
 
-            <div class="mySlides fade slide4">
+            <div class="mySlides fade slide5">
+              <a
+                class="btnlnk"
+                href="https://replit.com/@uthmaanb/tickets-sales#main.py"
+                target="_blank"
+                >live site</a
+              >
+            </div>
+
+            <div class="mySlides fade slide6">
+              <a class="btnlnk" href="#" target="_blank">live site</a>
+            </div>
+
+            <div class="mySlides fade slide7">
+              <a class="btnlnk" href="#" target="_blank">live site</a>
+            </div>
+
+            <div class="mySlides fade slide8">
+              <a class="btnlnk" href="#" target="_blank">live site</a>
+            </div>
+
+            <div class="mySlides fade slide9">
+              <a
+                class="btnlnk"
+                href="https://nostalgic-booth-3e9bb6.netlify.app/"
+                target="_blank"
+                >live site</a
+              >
+            </div>
+
+            <div class="mySlides fade slide10">
               <a
                 class="btnlnk"
                 href="https://vigorous-poitras-6ae56e.netlify.app"
