--- a/index.html
+++ b/index.html
@@ -384,11 +384,11 @@
               <i class="fas fa-external-link-alt proj-icon"></i>
             </li>
             <li class="dot" onclick="currentSlide(6)">
-              add project here
+              JS calculator
               <i class="fas fa-external-link-alt proj-icon"></i>
             </li>
             <li class="dot" onclick="currentSlide(7)">
-              add project here
+              Pokedex using pokeapi
               <i class="fas fa-external-link-alt proj-icon"></i>
             </li>
             <li class="dot" onclick="currentSlide(8)">
@@ -454,11 +454,21 @@
             </div>
 
             <div class="mySlides fade slide6">
-              <a class="btnlnk" href="#" target="_blank">live site</a>
+              <a
+                class="btnlnk"
+                href="https://compassionate-wing-5475c8.netlify.app/"
+                target="_blank"
+                >live site</a
+              >
             </div>
 
             <div class="mySlides fade slide7">
-              <a class="btnlnk" href="#" target="_blank">live site</a>
+              <a
+                class="btnlnk"
+                href="https://blissful-newton-e39830.netlify.app"
+                target="_blank"
+                >live site</a
+              >
             </div>
 
             <div class="mySlides fade slide8">
