--- a/index.html
+++ b/index.html
@@ -685,6 +685,23 @@
                 ><i class="fab fa-github fst-icon icon"></i>Github Profile</a
               >
             </div>
+            <div class="cnt-box">
+              <a
+                class="cnt-me-link"
+                href="https://codepen.io/uthmaanb"
+                target="_blank"
+                ><i class="fas fa-cube fst-icon icon"></i>Codepen Profile</a
+              >
+            </div>
+            <div class="cnt-box">
+              <a
+                class="cnt-me-link"
+                href="https://www.linkedin.com/in/uthmaan-breda/"
+                target="_blank"
+                ><i class="fab fa-linkedin fst-icon icon"></i>Linkedin
+                Profile</a
+              >
+            </div>
           </div>
         </div>
 
