--- a/index.html
+++ b/index.html
@@ -520,16 +520,16 @@
                 src="./images/godwin-dzvapatsra.jpg"
                 alt="image"
               />
-              <br />
+
               <div class="text text4">
                 <h2>Godwin Dzvapatsra</h2>
-                <br />
+
                 <h3 class="title">-Head of Curriculum and Learning-</h3>
-                <br />
+
                 <q>
                   I am delighted to be called upon as a reference for Uthmaan.
-                  He always behaves professionally. </q
-                ><br />
+                  He always behaves professionally.
+                </q>
               </div>
             </div>
             <div class="testemonial-text">
@@ -537,18 +537,18 @@
                 class="profile2"
                 src="./images/candice-amon.png"
                 alt="image"
-              /><br />
+              />
               <div class="text text5">
                 <h2>Candice Amon</h2>
-                <br />
+
                 <h3 class="title">-Life Choices Academy Facilitator-</h3>
-                <br />
+
                 <q>
                   Follows instructions very well.He is a humble and self
                   organised indivdiual. Possesses a lot of leadership skills.
                   Does not say much and allows his work to make noise on his
-                  behalf. </q
-                ><br />
+                  behalf.
+                </q>
               </div>
             </div>
             <div class="testemonial-text">
