--- a/index.html
+++ b/index.html
@@ -682,7 +682,7 @@
                 class="cnt-me-link"
                 href="https://github.com/uthmaanb"
                 target="_blank"
-                ><i class="fab fa-github fst-icon icon"></i>Github Profile</a
+                ><i class="fab fa-github fst-icon icon"></i>Github</a
               >
             </div>
             <div class="cnt-box">
@@ -690,7 +690,7 @@
                 class="cnt-me-link"
                 href="https://codepen.io/uthmaanb"
                 target="_blank"
-                ><i class="fas fa-cube fst-icon icon"></i>Codepen Profile</a
+                ><i class="fas fa-cube fst-icon icon"></i>Codepen</a
               >
             </div>
             <div class="cnt-box">
@@ -698,8 +698,7 @@
                 class="cnt-me-link"
                 href="https://www.linkedin.com/in/uthmaan-breda/"
                 target="_blank"
-                ><i class="fab fa-linkedin fst-icon icon"></i>Linkedin
-                Profile</a
+                ><i class="fab fa-linkedin fst-icon icon"></i>Linkedin</a
               >
             </div>
           </div>
