--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         <a class="link" href="#testimonials">Testimonials</a>
         <a class="link" href="#contact">Contact</a>
       </ul>
-      <a class="tel" href="tel:+27794637741" target="_blank">+27 79 463 7741</a>
+      <!-- <a class="tel" href="tel:+27794637741" target="_blank">+27 79 463 7741</a> -->
     </nav>
     <!-- Home / Landing -->
     <section>
@@ -182,7 +182,7 @@
 
         <div class="content-right3 skill-icons">
           <div class="text2">
-            <h1>Aspiring <span class="stndout">FULL STACK</span> Developer</h1>
+            <h1>A little <span class="stndout">About</span> me.</h1>
             <p class="description">
               I am a diligent and hard-working person with a good-natured and
               friendly spirit. I work well with others and can work
