--- a/index.html
+++ b/index.html
@@ -184,10 +184,11 @@
           <div class="text2">
             <h1>A little <span class="stndout">About</span> me.</h1>
             <p class="description">
-              I am a diligent and hard-working person with a good-natured and
-              friendly spirit. I work well with others and can work
-              independently as well. I enjoy the outdoors as well as spending
-              time at home. I would consider myself a well-rounded person.
+              Being the eldest of 11, I can work well with others and can work
+              independently too. I'm an ambiverted, enthusiastic and down to
+              earth individual. People describe me as having a good-natured and
+              friendly soul. I am a dedicated, focused, respectful and reliable
+              team player.
             </p>
           </div>
 
