--- a/index.html
+++ b/index.html
@@ -184,11 +184,10 @@
           <div class="text2">
             <h1>A little <span class="stndout">About</span> me.</h1>
             <p class="description">
-              Being the eldest of 11, I can work well with others and can work
-              independently too. I'm an ambiverted, enthusiastic and down to
-              earth individual. People describe me as having a good-natured and
-              friendly soul. I am a dedicated, focused, respectful and reliable
-              team player.
+              I'm an ambiveted, enthusiastic and down to earth individual.
+              People describe me as having a good-natured and friendly soul. I
+              work well with others and can work independently too. I am a
+              dedicated, focused, respectful and reliable team player.
             </p>
           </div>
 
