--- a/index.html
+++ b/index.html
@@ -255,7 +255,16 @@
 					<div id="work" class="vertical-menu about-content active1">
 						<div class="item">
 							<!-- <i class="fa-solid fa-laptop-code"></i> -->
-							<p class="year">Jan 2022- Present</p>
+							<p class="year">Apr 2022- Present</p>
+							<p class="descr">
+								Content Migrator at Rogerwilco Digital moving Content from
+								client websites to newer versions of the websites. Depending on
+								the size of the site, we would either work in teams or alone.
+							</p>
+						</div>
+						<div class="item">
+							<!-- <i class="fa-solid fa-laptop-code"></i> -->
+							<p class="year">Jan 2022- Mar 2022</p>
 							<p class="descr">
 								Intern Web developer with Tenacious digital at Life Choices
 								studios.
