--- a/index.html
+++ b/index.html
@@ -391,44 +391,48 @@
 					</div>
 					<ul class="dots">
 						<li class="dot" onclick="currentSlide(1)">
-							Proxy Api for react frontend
+							Blog site using vue
 							<i class="fas fa-external-link-alt proj-icon"></i>
 						</li>
 						<li class="dot" onclick="currentSlide(2)">
+							Proxy Api for react frontend
+							<i class="fas fa-external-link-alt proj-icon"></i>
+						</li>
+						<li class="dot" onclick="currentSlide(3)">
 							Bmi Calculator <i class="fas fa-external-link-alt proj-icon"></i>
 						</li>
-						<li class="dot sld6" onclick="currentSlide(3)">
+						<li class="dot sld6" onclick="currentSlide(4)">
 							Currency Converter
 							<i class="fas fa-external-link-alt proj-icon"></i>
 						</li>
-						<li class="dot" onclick="currentSlide(4)">
+						<li class="dot" onclick="currentSlide(5)">
 							full-stack E-commerce site
 							<i class="fas fa-external-link-alt proj-icon"></i>
 						</li>
-						<li class="dot" onclick="currentSlide(5)">
+						<li class="dot" onclick="currentSlide(6)">
 							Co-op frontend sneaker site
 							<i class="fas fa-external-link-alt proj-icon"></i>
 						</li>
-						<li class="dot" onclick="currentSlide(6)">
+						<li class="dot" onclick="currentSlide(7)">
 							Ticket sales
 							<i class="fas fa-external-link-alt proj-icon"></i>
 						</li>
-						<li class="dot" onclick="currentSlide(7)">
+						<li class="dot" onclick="currentSlide(8)">
 							JS calculator
 							<i class="fas fa-external-link-alt proj-icon"></i>
 						</li>
-						<li class="dot" onclick="currentSlide(8)">
+						<li class="dot" onclick="currentSlide(9)">
 							Pokedex using pokeapi
 							<i class="fas fa-external-link-alt proj-icon"></i>
 						</li>
-						<li class="dot" onclick="currentSlide(9)">
+						<li class="dot" onclick="currentSlide(10)">
 							add project here
 							<i class="fas fa-external-link-alt proj-icon"></i>
 						</li>
-						<li class="dot" onclick="currentSlide(10)">
+						<li class="dot" onclick="currentSlide(11)">
 							Contact Form <i class="fas fa-external-link-alt proj-icon"></i>
 						</li>
-						<li class="dot" onclick="currentSlide(11)">
+						<li class="dot" onclick="currentSlide(12)">
 							Project Cards <i class="fas fa-external-link-alt proj-icon"></i>
 						</li>
 					</ul>
@@ -439,6 +443,15 @@
 						<div class="mySlides fade slide1" style="display: flex">
 							<a
 								class="btnlnk"
+								href="https://github.com/uthmaanb/co-op_blog_site"
+								target="_blank"
+							>
+								Github</a
+							>
+						</div>
+						<div class="mySlides fade slide2" style="display: flex">
+							<a
+								class="btnlnk"
 								href="https://github.com/uthmaanb/newsapi-full-stack"
 								target="_blank"
 							>
@@ -446,7 +459,7 @@
 							>
 						</div>
 
-						<div class="mySlides fade slide2" style="display: flex">
+						<div class="mySlides fade slide3" style="display: flex">
 							<a
 								class="btnlnk"
 								href="https://replit.com/@uthmaanb/BMIcalculator-1#.replit"
@@ -456,7 +469,7 @@
 							>
 						</div>
 
-						<div class="mySlides fade slide3">
+						<div class="mySlides fade slide4">
 							<a
 								class="btnlnk"
 								href="https://replit.com/@uthmaanb/currency-converter#main.py"
@@ -466,7 +479,7 @@
 							>
 						</div>
 
-						<div class="mySlides fade slide4">
+						<div class="mySlides fade slide5">
 							<a
 								class="btnlnk"
 								href="https://final-project-uthmaanb.netlify.app/"
@@ -475,19 +488,10 @@
 							>
 						</div>
 
-						<div class="mySlides fade slide5">
-							<a
-								class="btnlnk"
-								href="https://nostalgic-booth-3e9bb6.netlify.app/"
-								target="_blank"
-								>live site</a
-							>
-						</div>
-
 						<div class="mySlides fade slide6">
 							<a
 								class="btnlnk"
-								href="https://replit.com/@uthmaanb/tickets-sales#main.py"
+								href="https://nostalgic-booth-3e9bb6.netlify.app/"
 								target="_blank"
 								>live site</a
 							>
@@ -496,7 +500,7 @@
 						<div class="mySlides fade slide7">
 							<a
 								class="btnlnk"
-								href="https://compassionate-wing-5475c8.netlify.app/"
+								href="https://replit.com/@uthmaanb/tickets-sales#main.py"
 								target="_blank"
 								>live site</a
 							>
@@ -505,17 +509,26 @@
 						<div class="mySlides fade slide8">
 							<a
 								class="btnlnk"
-								href="https://blissful-newton-e39830.netlify.app"
+								href="https://compassionate-wing-5475c8.netlify.app/"
 								target="_blank"
 								>live site</a
 							>
 						</div>
 
 						<div class="mySlides fade slide9">
-							<a class="btnlnk" href="#" target="_blank">live site</a>
+							<a
+								class="btnlnk"
+								href="https://blissful-newton-e39830.netlify.app"
+								target="_blank"
+								>live site</a
+							>
 						</div>
 
 						<div class="mySlides fade slide10">
+							<a class="btnlnk" href="#" target="_blank">live site</a>
+						</div>
+
+						<div class="mySlides fade slide11">
 							<a
 								class="btnlnk"
 								href="https://nostalgic-booth-3e9bb6.netlify.app/"
@@ -524,7 +537,7 @@
 							>
 						</div>
 
-						<div class="mySlides fade slide11">
+						<div class="mySlides fade slide12">
 							<a
 								class="btnlnk"
 								href="https://vigorous-poitras-6ae56e.netlify.app"
